--- a/src/index.css
+++ b/src/index.css
@@ -1,68 +1,86 @@
-:root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-}
-
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
+body{
+  background-color: brown;
 }
 button:hover {
-  border-color: #646cff;
+ cursor: pointer;
 }
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+button {
+  text-transform: capitalize;
+}
+.hide {
+    display: none;
+}
+.tworem{
+    font-size: 2rem !important;
+
+}
+.overlay {
+  position: absolute;
+  inset: 0;
+  background: rgba(0, 0, 0, 0.6);
+  z-index: 0;
+    backdrop-filter: blur(5px);
+}
+.fullPage {
+    display: flex;
+   
+    height: 100vh;
+    width: 100%;
+    margin: 0px;
+    align-items: center;
+    justify-content: space-evenly;
+    position: relative;
+    overflow: hidden;
+    
+}
+.fullPage, .background {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  min-width: 100%;
+  min-height: 100%;
+  transform: translate(-50%, -50%);
+  object-fit: cover;
+  z-index: -1;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+
+.title {
+    color: aliceblue;
+    font-size: clamp(1rem, 3rem , 5rem) !important;
+    text-transform: capitalize;
+    font-style: italic;
+    font-weight: bolder;
+    margin: 10px 0px 0px;
+
+}
+.subTitle {
+    font-size: 1.8rem;
+    font-style: oblique;
+    text-transform: capitalize;
+    margin-bottom: 0px;
+
+}
+
+.subTitle ,.title{
+  color: aliceblue;
+    text-align: center;
+  font-family: "Georgia", serif;
+  letter-spacing: 1px;
+}
+
+
+.ceaveat {
+  font-family: "Caveat", cursive;
+  font-optical-sizing: auto;
+  font-weight: 700;
+  font-style: normal;
+}
+ .abril-fatface-regular {
+  font-family: "Abril Fatface", serif;
+  font-weight: 400;
+  font-style: normal;
+}
+.nameColor {
+  color: linear-gradient(blueviolet,greenyellow);
 }
